
### Solvers

- groundwaterFoam

  - Transient simulations use directly the OpenFOAM fvMatrix residuals to
  evaluate Picard convergence. Relaxation factor can be used for transient.

  - Two modes are available for time-stepping :

    - truncation: based on truncation error (using truncationError value)
    - nIterPicard: based on the number of Picard iteration requires at each
    timestep (using nIterPicard)

### Bug fix

- eventInfiltration compute velocity along gravity-axis (instead of patch
  normal) to avoid lateral infiltration for non-planar patch. Negative values in
  infiltration.dat still mean inflow (and positive value exfiltration)

************************
*** PMF v2310
*** Minor fixes and compatibility
************************

### Compatibility

- fix partial compatibility for Clang and v2212

### Minor changes

- rename libraries to PMFXXXX.so

- fix keyword for output event in groundwaterTransportFoam

- remove non-working mapFieldsFrom2D folder

************************
*** PMF v2303
*** Dual porosity model + readthedocs
************************

### Bug fix

- parallel issue for source-injection/fixed points

- parallel issue in time derivative computation (used for timesteps management) 

### General

- All solvers display current version of PMF.

- Global reorganization of libraries for dual porosity developements.

- To handle scalar transport in simple/dual porosity models, CEqn.H has been
  moved in porousMediumTransportModel classes (and removed from solver). The
  transport equation is solved as for example:

  pmTransportModel->solveTransport(Utheta, phi, theta);

### Libraries

- porousMediumModel

  - new class for handling porosity (eps) and permeability (K)

- twophasePorousMediumModel

  - new asbtract class for handling simple/dual porosity model (flow only)

- simplePorosity

  - porousMedium class for one porosity model (one Saturation, kr, pc...)

- dualPorosity
